--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -16,7 +16,12 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "clean": "rm -rf dist"
+    "clean": "rm -rf dist",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:push": "drizzle-kit push",
+    "db:studio": "drizzle-kit studio",
+    "db:drop": "drizzle-kit drop"
   },
   "dependencies": {
     "@ai-sdk/google": "^2.0.5",
@@ -25,8 +30,15 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.4.20",
     "@types/multer": "^2.0.0",
+    "@types/pg": "^8.15.5",
     "ai": "^5.0.11",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
+    "dotenv": "^17.2.2",
+    "drizzle-kit": "^0.31.4",
+    "drizzle-orm": "^0.44.4",
     "multer": "^2.0.2",
+    "pg": "^8.16.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "zod": "^4.1.8"
