--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
   "engines": {
     "node": ">=18"
   },
-  "packageManager": "pnpm@9.0.0"
+  "packageManager": "pnpm@9.0.0",
+  "dependencies": {
+    "react-hook-form": "^7.61.1"
+  }
 }
