--- a/.gitignore
+++ b/.gitignore
@@ -24,8 +24,10 @@ yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
-# local env files
+# environment files
+.env
 .env*.local
+!.env.example
 
 # turbo
 .turbo
