refactor: update TypeScript configuration and improve database module imports
- Changed TypeScript module system to NodeNext and updated target to ES2022 for better compatibility.
- Enhanced database module by importing necessary components directly, improving clarity and reducing dynamic imports.
- Standardized import statements across various files for consistency.
- Simplified method signatures in the ResumeService for cleaner code.

--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -1,12 +1,17 @@
 {
   "compilerOptions": {
-    "module": "CommonJS",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
+    "target": "es2022",
+    "allowJs": true,
+    "moduleDetection": "force",
+    "isolatedModules": true,
+    "esModuleInterop": true,
     "declaration": true,
     "removeComments": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
-    "target": "ES2021",
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
