--- a/apps/extension/package.json
+++ b/apps/extension/package.json
@@ -11,8 +11,11 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-markdown": "^10.1.0"
   },
   "devDependencies": {
     "@types/chrome": "^0.1.12",
