--- a/apps/extension/public/manifest.json
+++ b/apps/extension/public/manifest.json
@@ -3,27 +3,16 @@
   "name": "FittedIn",
   "version": "0.1.0",
   "description": "Chrome extension for fitted-in",
-  "permissions": [
-    "storage",
-    "activeTab",
-    "sidePanel",
-    "scripting"
-  ],
-  "host_permissions": [
-    "https://www.linkedin.com/jobs/*"
-  ],
+  "permissions": ["storage", "activeTab", "sidePanel", "scripting"],
+  "host_permissions": ["https://www.linkedin.com/jobs/*"],
   "background": {
     "service_worker": "background.js",
     "type": "module"
   },
   "content_scripts": [
     {
-      "matches": [
-        "https://www.linkedin.com/jobs/*"
-      ],
-      "js": [
-        "content.js"
-      ],
+      "matches": ["https://www.linkedin.com/jobs/*"],
+      "js": ["content.js"],
       "run_at": "document_idle"
     }
   ],
@@ -34,8 +23,9 @@
     "default_title": "Open fitted-in"
   },
   "icons": {
-    "16": "icons/icon.svg",
-    "48": "icons/icon.svg",
-    "128": "icons/icon.svg"
+    "16": "icons/icon16.png",
+    "32": "icons/icon32.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
   }
 }
