--- a/apps/extension/package.json
+++ b/apps/extension/package.json
@@ -5,7 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build:extension": "vite build --config vite.config.extension.ts",
+    "build:content": "vite build --config vite.config.content.ts",
+    "build": "rm -rf dist && pnpm run build:extension && pnpm run build:content",
     "preview": "vite preview",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "clean": "rm -rf dist"
