--- a/apps/extension/package.json
+++ b/apps/extension/package.json
@@ -18,7 +18,8 @@
     "lucide-react": "^0.532.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-markdown": "^10.1.0"
+    "react-markdown": "^10.1.0",
+    "use-stick-to-bottom": "^1.1.1"
   },
   "devDependencies": {
     "@types/chrome": "^0.1.12",
