--- a/apps/extension/public/manifest.json
+++ b/apps/extension/public/manifest.json
@@ -4,14 +4,14 @@
   "version": "0.1.0",
   "description": "Chrome extension for fitted-in",
   "permissions": ["storage", "activeTab", "sidePanel", "scripting"],
-  "host_permissions": ["https://www.linkedin.com/jobs/*"],
+  "host_permissions": ["https://www.linkedin.com/jobs/**"],
   "background": {
     "service_worker": "background.js",
     "type": "module"
   },
   "content_scripts": [
     {
-      "matches": ["https://www.linkedin.com/jobs/*"],
+      "matches": ["https://www.linkedin.com/jobs/**"],
       "js": ["content.js"],
       "run_at": "document_idle"
     }
