feat: enhance extension functionality with web navigation and content script improvements
- Added `webNavigation` permission in manifest.json to support new features.
- Implemented a listener for `onHistoryStateUpdated` to send messages to content scripts, improving interaction.
- Refactored the `optimizeResume` function to maintain its functionality while ensuring clarity.
- Simplified visibility logic in the content script to always show the component on LinkedIn job pages.
- Updated message handling in the content script to trigger app injection based on received messages.

--- a/apps/extension/public/manifest.json
+++ b/apps/extension/public/manifest.json
@@ -3,7 +3,13 @@
   "name": "FittedIn",
   "version": "0.1.0",
   "description": "Chrome extension for fitted-in",
-  "permissions": ["storage", "activeTab", "sidePanel", "scripting"],
+  "permissions": [
+    "storage",
+    "activeTab",
+    "sidePanel",
+    "scripting",
+    "webNavigation"
+  ],
   "host_permissions": ["https://www.linkedin.com/jobs/**"],
   "background": {
     "service_worker": "background.js",
