--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -31,9 +31,11 @@
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.4.20",
+    "@thallesp/nestjs-better-auth": "^2.0.1",
     "@types/multer": "^2.0.0",
     "@types/pg": "^8.15.5",
     "ai": "^5.0.11",
+    "better-auth": "^1.3.27",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "dotenv": "^17.2.2",
@@ -41,6 +43,7 @@
     "drizzle-orm": "^0.44.4",
     "multer": "^2.0.2",
     "pg": "^8.16.3",
+    "postgres": "^3.4.5",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "zod": "^4.1.8"
