refactor: update resume controller and job description summarizer service
- Removed anonymous access from the `optimize` endpoint in the `ResumeController` for enhanced security.
- Updated the `JobDescriptionSummarizerService` to use a default model instead of a hardcoded Google model, improving flexibility.
- Added new dependencies in the extension for better UI components and authentication handling.
- Enhanced the extension's manifest to include local development permissions and improved user interface with a sign-out feature.

--- a/apps/extension/public/manifest.json
+++ b/apps/extension/public/manifest.json
@@ -10,7 +10,10 @@
     "scripting",
     "webNavigation"
   ],
-  "host_permissions": ["https://www.linkedin.com/jobs/**"],
+  "host_permissions": [
+    "https://www.linkedin.com/jobs/**",
+    "http://localhost:3001/*"
+  ],
   "background": {
     "service_worker": "background.js",
     "type": "module"
