--- a/apps/extension/package.json
+++ b/apps/extension/package.json
@@ -13,6 +13,8 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
+    "@radix-ui/react-popover": "^1.1.14",
+    "better-auth": "^1.3.27",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.3",
     "lucide-react": "^0.532.0",
