chore: update configuration and scripts for OpenNext integration
- Added new entries to .gitignore for development and deployment files.
- Updated turbo.json to include Vercel output in build outputs.
- Modified next.config.mjs to initialize OpenNext for Cloudflare development.
- Enhanced package.json with new scripts for OpenNext deployment and added dependencies for Cloudflare integration.
- Removed unnecessary console log from server-fetch utility for cleaner output.

--- a/.gitignore
+++ b/.gitignore
@@ -28,12 +28,17 @@ yarn-error.log*
 .env
 .env*.local
 !.env.example
+.dev.vars
+
 
 # turbo
 .turbo
 
 # vercel
 .vercel
+
+# open-next
+.open-next
 
 # typescript
 *.tsbuildinfo
@@ -43,3 +48,6 @@ next-env.d.ts
 # pnpm
 pnpm-lock.yaml
 /apps/*/pnpm-lock.yaml
+
+# wrangler
+.wrangler
