refactor: clean up authentication context and update backend configurations
- Removed unused imports in auth-context.tsx for improved clarity.
- Updated package.json to specify required Node.js and npm versions for better compatibility.
- Modified trusted origins in app.module.ts to allow subdomains for enhanced flexibility in deployment.

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -100,5 +100,9 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "engines": {
+    "npm": ">11.5.1",
+    "node": ">=24"
   }
 }
