chore: update Node.js version requirement in package.json
- Changed the Node.js version requirement from ">=24" to ">=22" for better compatibility with the current environment.

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -102,7 +102,7 @@
     "testEnvironment": "node"
   },
   "engines": {
-    "npm": ">11.5.1",
-    "node": ">=24"
+    "pnpm": ">=9",
+    "node": ">=22"
   }
 }
