--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "turbo": "^2.0.0"
   },
   "engines": {
-    "node": ">=22"
+    "node": ">=22",
+    "pnpm": ">=9"
   },
   "packageManager": "pnpm@9.0.0",
   "dependencies": {
