feat: enhance observability and logging in admin app
- Added observability configuration in wrangler.jsonc to enable request logging with a 100% head sampling rate.
- Included a console log in the Home component of page.tsx to output headers, improving debugging capabilities for session fetch requests.

--- a/apps/admin/wrangler.jsonc
+++ b/apps/admin/wrangler.jsonc
@@ -4,6 +4,11 @@
   "name": "admin",
   "compatibility_date": "2025-10-08",
   "compatibility_flags": ["nodejs_compat", "global_fetch_strictly_public"],
+  "observability": {
+    "enabled": true,
+    // Optional: Configure head_sampling_rate to control the percentage of requests logged
+    "head_sampling_rate": 1.0, // Logs 100% of requests
+  },
   "assets": {
     "directory": ".open-next/assets",
     "binding": "ASSETS",
