feat: enhance API routing and update project configuration
- Added rewrites in next.config.mjs to route API authentication requests to the specified backend URL.
- Renamed the project in wrangler.jsonc from "admin" to "fitted-in-admin" for clarity.
- Updated auth-client.ts to use NEXT_PUBLIC_APP_HOST for the base URL, improving environment configuration.
- Refactored session handling in page.tsx to streamline authentication logic.

--- a/apps/admin/wrangler.jsonc
+++ b/apps/admin/wrangler.jsonc
@@ -1,7 +1,7 @@
 {
   "$schema": "node_modules/wrangler/config-schema.json",
   "main": ".open-next/worker.js",
-  "name": "admin",
+  "name": "fitted-in-admin",
   "compatibility_date": "2025-10-08",
   "compatibility_flags": ["nodejs_compat", "global_fetch_strictly_public"],
   "observability": {
