--- a/apps/extension/public/manifest.json
+++ b/apps/extension/public/manifest.json
@@ -1,19 +1,13 @@
 {
   "manifest_version": 3,
   "name": "FittedIn",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Chrome extension for fitted-in",
-  "permissions": [
-    "storage",
-    "activeTab",
-    "sidePanel",
-    "scripting",
-    "webNavigation"
-  ],
+  "permissions": ["activeTab", "sidePanel", "scripting", "webNavigation"],
   "host_permissions": [
     "http://localhost:3000/*",
     "https://www.linkedin.com/jobs/**",
-    "https://fitted-in-admin.marthayaputra-han.workers.dev//*"
+    "https://fitted-in-admin.marthayaputra-han.workers.dev/*"
   ],
   "background": {
     "service_worker": "background.js",
