fix: update API URL handling and increment extension version
- Modified next.config.mjs to use a default API URL for local development when API_URL is not set.
- Bumped version number in manifest.json from 0.1.1 to 0.1.2.
- Removed unnecessary permission from manifest.json to streamline access requirements.
- Enhanced background.ts to ensure message sending only occurs when content is ready, improving reliability.

--- a/apps/extension/public/manifest.json
+++ b/apps/extension/public/manifest.json
@@ -1,9 +1,9 @@
 {
   "manifest_version": 3,
   "name": "FittedIn",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Chrome extension for fitted-in",
-  "permissions": ["activeTab", "sidePanel", "scripting", "webNavigation"],
+  "permissions": ["activeTab", "sidePanel", "webNavigation"],
   "host_permissions": [
     "http://localhost:3000/*",
     "https://www.linkedin.com/jobs/**",
